# Crimbo

./: DockerFile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
assets/: colornames.json
src/: bot.py  config.py  logger.py  main.py
src/errors/: __init__.py
src/extensions/: hello.py  help.py  ping.py
src/extensions/image/: __init__.py  _effect.py  effect.py  tint.py
src/extensions/misc/: __init__.py  color.py
src/extensions/utils/: _colors.py  color_arg.py  colors_helper.py  fuzzy_search.py  gen_helpers.py  image_helper.py
