[project]
name = "crimbo"
version = "0.1.0"
description = "A general purpose discord bot"
authors = [{ name = "Kris", email = "krispysnacc@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = ["discord.py"]


[project.scripts]
crimbo = "main:main"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
