[project]
name = "crimbo"
version = "0.1.0"
description = "A General purpose discord bot"
authors = [{ name = "kris", email = "krispysnacc@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "discord.py",
    "box",
    "toml",
    "imageio[py]",
    "numpy",
    "pyopencl",
    "fuzzywuzzy",
    "python-dotenv",
    "colorzero",
    "python-Levenshtein",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
